[tool.poetry]
name = "networkscanner"
version = "0.1.0"
description = ""
authors = ["Emran Billah <emran@drinkable.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
argparse = "^1.4.0"
ipaddress = "^1.0.23"
logging = "^0.4.9.6"
scapy = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
